--- a/user-onboarding/src/App.css
+++ b/user-onboarding/src/App.css
@@ -2,8 +2,18 @@
   text-align: center;
 }
 
+.button {
+  width: 25%; 
+  margin: 0 auto; 
+  font-size: 1.2rem; 
+}
+
 .error {
   color: red;
+}
+
+.checkbox-container{
+  margin-bottom: 10px; 
 }
 
 .form-container {
@@ -18,4 +28,9 @@
   display: flex; 
   flex-direction: column; 
   justify-content: space-around; 
+}
+
+.field {
+  margin-bottom: 20px;
+  font-size: 1.2rem; 
 }
